fixed: mobile text spills

--- a/src/style/_donation.scss
+++ b/src/style/_donation.scss
@@ -23,7 +23,7 @@
     }
     select {
       background-color: rgb(248, 248, 248);
-      border: 1px solid rgb(166,166,166);
+      border: 2px solid rgb(166,166,166);
       cursor: pointer;
       font-size: 0.8rem;
       height: 28px;
